New tab to model window changes New files added - [cx2_draft_dataModel.json] Files modified - [MyFees.variables.json,MyFees.html,MyCart.js,FindForm.js,FindForm.html,MyFees.js,MyCart.html,FindForm.variables.json,MyCart.variables.json]

--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -44,4 +44,7 @@
     <wm-view class="dialog-view" name="view1">
         <wm-pagedialog name="pagedialogNewForm" title="New Form" content="NewForm" oktext="Close" iconclass=""></wm-pagedialog>
     </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-iframedialog name="iframedialog1" width="80%" title="Details" url="bind:Variables.stvFormLink.dataSet.dataValue"></wm-iframedialog>
+    </wm-view>
 </wm-page>
