updated icon set for new/open/closed cases and made NewCases match Open/Closed panel view Files modified - [OpenCases.html,ViewProject.variables.json,NewCases.html,ClosedCases.html,pom.xml]

--- a/src/main/webapp/pages/ClosedCases/ClosedCases.html
+++ b/src/main/webapp/pages/ClosedCases/ClosedCases.html
@@ -11,9 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="2em unset">
-                        <wm-label name="label5" caption="Closed Code Enforcement Cases" fontweight="bold" class="h4"></wm-label>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="2em unset"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="2em unset">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
@@ -25,7 +23,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn19">
-                        <wm-panel iconclass="wi wi-book-open" autoclose="outsideClick" name="panel1" title="Closed Code Enforcement Cases" class="panel-primary">
+                        <wm-panel iconclass="wi wi-lock-outline" autoclose="outsideClick" name="panel1" title="Closed Code Enforcement Cases" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
