--- a/src/main/webapp/pages/OpenCases/OpenCases.html
+++ b/src/main/webapp/pages/OpenCases/OpenCases.html
@@ -23,7 +23,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn19">
-                        <wm-panel iconclass="wi wi-book-open" autoclose="outsideClick" name="panel1" title="Open Code Enforcement Cases" class="panel-primary">
+                        <wm-panel iconclass="wi wi-lock-open" autoclose="outsideClick" name="panel1" title="Open Code Enforcement Cases" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
