--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -106,8 +106,8 @@
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn10">
                         <wm-composite name="composite3">
-                            <wm-label class="col-md-3 control-label" name="label5" caption="Inspection Description" width="30%" required="true"></wm-label>
-                            <wm-container class="col-md-9" name="container3" width="70%">
+                            <wm-label class="col-md-4 form-control-static" name="label5" caption="Inspection Description" width="30%" required="true" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-8" name="container3" width="70%">
                                 <wm-textarea name="textareaDescription" placeholder="Enter Description"></wm-textarea>
                             </wm-container>
                         </wm-composite>
