--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -32,7 +32,7 @@
                                                             maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                         </wm-gridcolumn>
                                                         <wm-gridcolumn columnwidth="6" name="gridcolumn3" padding="unset 1em unset unset">
-                                                            <wm-form-field name="description" displayname="Inspection Description" show="true" primary-key="false" generator="assigned" key="description" type="text" readonly="false" required="true" widget="textarea"
+                                                            <wm-form-field name="description" displayname="Inspection Description" show="true" primary-key="false" generator="assigned" key="description" type="text" readonly="false" required="false" widget="textarea"
                                                             maxchars="5000"></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
