- Updated "Use" to "UsedFor" since Use is a reserved word to avoid any possible issues. Files modified - [ManageGISData.variables.json,Forms.html,Forms.js,cx2_published_dataModel.json,CodeList.java,EditGISRecord.variables.json,Document.java,ViewInspection.variables.json,MasterInspections.java,ViewInspection.html,EditGISRecord.js,FormToInspectionCategoryMapping.java,MasterCases.java,pom.xml,EditGISRecord.html,CodeSets.java,Gisrecords.java,LetterTemplates.java] Removed files - [cx2_draft_dataModel.json]

--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -167,7 +167,7 @@
                                         </wm-grid>
                                     </wm-livegrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneVIOLATIONS" title="VIOLATIONS"></wm-tabpane>
+                                <wm-tabpane name="tabpaneViolations" title="VIOLATIONS"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFees" title="FEES" show="true">
                                     <wm-livegrid formlayout="dialog" name="livegrid4">
                                         <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvFees.dataSet" navigation="Classic" name="gridFees" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
